[project]
name = "yukinoise-auth"
version = "0.1.0"
description = "Keycloak authentication library for FastAPI microservices"
authors = [
    {name = "PSK", email = "shaban.benito.dimitri@gmail.com"}
]
packages = [{ include = "yukinoise_auth", from = "src" }]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "fastapi>=0.124.2,<0.125.0",
    "uvicorn>=0.38.0,<0.39.0",
    "python-keycloak>=5.8.1,<6.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "pyjwt[crypto]>=2.10.1,<3.0.0",
    "httpx>=0.27.0,<0.28.0",
    "cryptography>=42.0.0,<43.0.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.9,<0.15.0",
    "mypy>=1.19.1,<2.0.0",
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<0.24.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

